@@ -7,13 +7,13 @@ import com.example.Sparta_Store.likes.dto.response.LikeResponseDto;
 import com.example.Sparta_Store.likes.entity.Likes;
 import com.example.Sparta_Store.likes.exception.LikesErrorCode;
 import com.example.Sparta_Store.likes.repository.LikesRepository;
-import com.example.Sparta_Store.user.entity.User;
+import com.example.Sparta_Store.user.entity.Users;
 import com.example.Sparta_Store.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,8 +24,10 @@ public class LikesService {
     private final ItemRepository itemRepository;
 
     public void addLike(Long itemId, Long userId) {
-        User user = userRepository.findById(userId).orElseThrow(()-> new CustomException(LikesErrorCode.NOT_EXISTS_USER));
-        Item item = itemRepository.findById(itemId).orElseThrow(()-> new CustomException(LikesErrorCode.NOT_EXISTS_PRODUCT));
+        Users user = userRepository.findById(userId)
+                .orElseThrow(()-> new CustomException(LikesErrorCode.NOT_EXISTS_USER));
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(()-> new CustomException(LikesErrorCode.NOT_EXISTS_PRODUCT));
 
         if(likesRepository.findByUserAndItem(user, item).isPresent()) {
             throw new CustomException(LikesErrorCode.PRODUCT_ALREADY_WISHLIST);
@@ -37,21 +39,31 @@ public class LikesService {
     // 찜 목록
     public List<LikeResponseDto> getLikeList(Long userId) {
 
-        User user = userRepository.findById(userId).orElseThrow(()-> new CustomException(LikesErrorCode.NOT_EXISTS_USER));
+        Users user = userRepository.findById(userId).
+                orElseThrow(()-> new CustomException(LikesErrorCode.NOT_EXISTS_USER));
 
         List<Likes> likeList = likesRepository.findAllByUser(user);
 
         return likeList.stream()
                 .map(LikeResponseDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public Long getLikeCount(Long itemId) {
+        return likesRepository.countByItemId(itemId);
     }
 
     // 찜 취소
+    @Transactional
     public void removeLike(Long itemId, Long userId) {
-        User user = userRepository.findById(userId).orElseThrow(()-> new CustomException(LikesErrorCode.NOT_EXISTS_USER));
-        Item item = itemRepository.findById(itemId).orElseThrow(()-> new CustomException(LikesErrorCode.NOT_EXISTS_PRODUCT));
-        Likes likes = likesRepository.findByUserAndItem(user, item).orElseThrow(()-> new CustomException(LikesErrorCode.PRODUCT_NOT_WISHLIST));
+        Users user = userRepository.findById(userId)
+                .orElseThrow(() -> new CustomException(LikesErrorCode.NOT_EXISTS_USER));
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new CustomException(LikesErrorCode.NOT_EXISTS_PRODUCT));
+        Likes likes = likesRepository.findByUserAndItem(user, item)
+                .orElseThrow(() -> new CustomException(LikesErrorCode.PRODUCT_NOT_WISHLIST));
 
         likesRepository.delete(likes);
     }
+
 }
